Force refresh of selected thumbnails when F5 is pressed.

BUG:230972